<resources>
    <string name="app_name">calculator</string>
    <string name="app_name_ru">Калькулятор</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>

    <string name="discard">C</string>
    <string name="change_symbol">+/-</string>
    <string name="percent">%</string>
    <string name="delete">DEL</string>

    <string name="one_themes">Первая тема</string>
    <string name="two_themes">Вторая тема</string>
    <string name="three_themes">Третья тема</string>
</resources>