<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_symbol" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button19"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button14"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        style="@style/button.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button10"
        style="@style/button.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button11"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button12"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button13"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button15"
        style="@style/button.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button16"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button17"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button18"
        style="@style/button.accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button20"
        style="@style/button.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus" />
</GridLayout>